# Glamcheck-Backend

./: .gitignore  docker-compose.yaml  example.env  pyproject.toml
glamcheck/: app.py  auth_dependencies.py  dependencies.py  settings.py
glamcheck/db/: session.py
glamcheck/models/: gender.py  login_form.py  registration_form.py
glamcheck/models/common/: __init__.py  decimal.py  decimal_model.py  detail_response_model.py
glamcheck/models/composition/api/: __init__.py  analysis_by_product_title_request.py  analysis_by_product_title_request_model.py  analysis_request.py  analysis_request_model.py  analysis_response.py  analysis_response_model.py  analysis_result.py  analysis_result_model.py  analysis_settings_model.py  not_found_components_policy.py  range_additional_property_model.py  range_cosmetic_property.py  set_policy.py
glamcheck/models/composition/domain/: __init__.py  additional_property_model.py  component.py  component_model.py  cosmetic_property.py  danger_factor.py  danger_factor_type.py  input_percentage_model.py  naturalness_type.py
glamcheck/routers/: __init__.py  auth.py  composition.py  composition_router.py  recommendation.py  user.py
glamcheck/services/: abstract_component_service.py
glamcheck/services/component_storage/: __init__.py  component_storage_service.py
glamcheck/services/cosmobase/: __init__.py  additional_property.py  component.py  cosmetic_property.py  cosmobase_component_service.py  danger_factor.py  danger_factor_type.py  input_percentage.py  main.py  naturalness.py
glamcheck/services/jwt/: service.py
