[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
pyjwt = "^2.9.0"
aiohttp = "^3.10.10"
structlog = "^24.4.0"
email-validator = "^2.2.0"
black = "^24.10.0"
mypy = "^1.13.0"
argon2-cffi = "^23.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
